--- a/preamble.tex
+++ b/preamble.tex
@@ -16,8 +16,8 @@
 \linespread{1.5}
 %\IEEEoverridecommandlockouts
 
-\title{Carnegie Mellon University\\Department of Electrical and Computer Engineering\\ \vspace{50pt} ``Accountability for Privacy and Fairness Violations in Data-Driven Systems with Limited Access''  \vspace{30 pt}\\ Ph.D. Thesis Prospectus\vspace{100 pt}}
-\author{Amit Datta\\Electrical and Computer Engineering\\Carnegie Mellon University \vspace{30pt}\\Adviser: Prof. Anupam Datta}
+\title{Carnegie Mellon University\\Department of Electrical and Computer Engineering\\ \vspace{50pt} ``Thesis name''  \vspace{30 pt}\\ Ph.D. Thesis Prospectus\vspace{100 pt}}
+\author{My name\\Electrical and Computer Engineering\\Carnegie Mellon University \vspace{30pt}\\Adviser: Prof. Anupam Datta}
 \date{}
 
 \newcommand{\amit}[1]{{\color{red}{[[Amit: {#1}]]}}}
