now with abstract

--- a/preamble.tex
+++ b/preamble.tex
@@ -16,8 +16,8 @@
 \linespread{1.5}
 %\IEEEoverridecommandlockouts
 
-\title{Carnegie Mellon University\\Department of Electrical and Computer Engineering\\ \vspace{50pt} ``Thesis name''  \vspace{30 pt}\\ Ph.D. Thesis Prospectus\vspace{100 pt}}
-\author{My name\\Electrical and Computer Engineering\\Carnegie Mellon University \vspace{30pt}\\Adviser: Prof. Anupam Datta}
+\title{Carnegie Mellon University\\Department of Electrical and Computer Engineering\\ \vspace{50pt} ``Representation-aware accounting of machine learning models''  \vspace{30 pt}\\ Ph.D. Thesis Prospectus\vspace{100 pt}}
+\author{Sophia Kovaleva\\Electrical and Computer Engineering\\Carnegie Mellon University \vspace{30pt}\\Advisor: Prof. Anupam Datta}
 \date{}
 
 \newcommand{\amit}[1]{{\color{red}{[[Amit: {#1}]]}}}
