--- a/proposal.tex
+++ b/proposal.tex
@@ -10,13 +10,8 @@
 %\listoftables
 
 \newpage
-\begin{abstract}
-
-
-\end{abstract}
-
-
-\chapter{Introduction}
+\input{abstract}
+\input{introduction}
 
 
 
