--- a/proposal.bib
+++ b/proposal.bib
@@ -1,7 +1,76 @@
+@misc{facebook-cf,
+  title =        {Recommending items to more than a billion people},
+  author = {Maja Kabiljo and Aleksander Ilic},
+  howpublished = {\url{https://code.facebook.com/posts/861999383875667/recommending-items-to-more-than-a-billion-people/}},
+  note =         accessed # "2018-04-24",
+  year = {2015},
+}
+
+@article{koren2009matrix,
+  title =        {Matrix factorization techniques for recommender
+                  systems},
+  author =       {Koren, Yehuda and Bell, Robert and Volinsky, Chris},
+  journal =      {Computer},
+  volume =       {42},
+  number =       {8},
+  year =         {2009},
+  publisher =    {IEEE}
+}
+
+@article{CLEGER201490,
+	title = "Learning from explanations in recommender systems",
+	journal = "Information Sciences",
+	volume = "287",
+	pages = "90 - 108",
+	year = "2014",
+	issn = "0020-0255",
+	doi = "https://doi.org/10.1016/j.ins.2014.07.031",
+	url = "http://www.sciencedirect.com/science/article/pii/S0020025514007312",
+	author = "Sergio Cleger and J.M. Fernández-Luna and Juan F. Huete",
+	keywords = "Recommender system, Recommendation explanation, Learning"
+}
+
+@article{datta_tschantz_datta_2015,
+	title={Automated Experiments on Ad Privacy Settings},
+	url={https://www.degruyter.com/view/j/popets.2015.1.issue-1/popets-2015-0007/popets-2015-0007.xml},
+	journal={Proceedings on Privacy Enhancing Technologies},
+	publisher={De Gruyter Open},
+	author={Datta, Amit and Tschantz, Michael Carl and Datta, Anupam},
+	year={2015},
+	month={Jun}
+}
+
+@article{WEST20001131,
+	title = "Neural network credit scoring models",
+	journal = "Computers \& Operations Research",
+	volume = "27",
+	number = "11",
+	pages = "1131 - 1152",
+	year = "2000",
+	issn = "0305-0548",
+	doi = "https://doi.org/10.1016/S0305-0548(99)00149-5",
+	url = "http://www.sciencedirect.com/science/article/pii/S0305054899001495",
+	author = "David West",
+	keywords = "Credit scoring, Neural networks, Multilayer perceptron, Radial basis function, Mixture-of-experts"
+}
+
+@inproceedings{Seo2018PartiallyGN,
+  title={Partially Generative Neural Networks for Gang Crime Classification with Partial Information},
+  author={Sungyong Seo and Hau Chan and P. Jeffrey Brantingham and Jorja Leap and Phebe Vayanos and Milind Tambe and Yan Liu},
+  year={2018}
+}
+
 @article{Beutel2017DataDA,
   title={Data Decisions and Theoretical Implications when Adversarially Learning Fair Representations},
   author={Alex Beutel and Jilin Chen and Zhe Zhao and Ed Huai-hsin Chi},
   journal={CoRR},
   year={2017},
   volume={abs/1707.00075}
+}
+
+@book{RoseMaryCourtCase,
+	title={Rose Mary BOYD et al., Plaintiffs, v. OZARK AIR LINES, INC., Defendant.},
+	url={https://law.justia.com/cases/federal/district-courts/FSupp/419/1061/1979615/},
+	year={1976},
+	month={Aug}
 }
