--- a/introduction.tex
+++ b/introduction.tex
@@ -47,3 +47,7 @@ that is necessary to reach all of the aircraft controls but it is illegal to
 set the minimum requirement at a higher point of 5'6" because that
 disproportionately selects against women and is not justified as necessary
 for a pilot\cite{RoseMaryCourtCase}.
+
+\paragraph{Completed work}
+
+
