--- a/proposal.bib
+++ b/proposal.bib
@@ -74,3 +74,14 @@
 	year={1976},
 	month={Aug}
 }
+
+@inproceedings{datta2016algorithmic,
+  title =        {Algorithmic transparency via quantitative input
+                  influence: Theory and experiments with learning
+                  systems},
+  author =       {Datta, Anupam and Sen, Shayak and Zick, Yair},
+  booktitle =    {Security and Privacy (SP), 2016 IEEE Symposium on},
+  pages =        {598--617},
+  year =         {2016},
+  organization = {IEEE}
+}
