--- a/proposal.bib
+++ b/proposal.bib
@@ -86,3 +86,35 @@
   organization = {IEEE}
 }
 
+@inproceedings{gantner2010learning,
+  title =        {Learning attribute-to-feature mappings for
+                  cold-start recommendations},
+  author =       {Gantner, Zeno and Drumond, Lucas and Freudenthaler,
+                  Christoph and Rendle, Steffen and Schmidt-Thieme,
+                  Lars},
+  booktitle =    {Data Mining (ICDM), 2010 IEEE 10th International
+                  Conference on},
+  pages =        {176--185},
+  year =         {2010},
+  organization = {IEEE}
+}
+
+@inproceedings{rossetti2013towards,
+  title =        {Towards explaining latent factors with topic models
+                  in collaborative recommender systems},
+  author =       {Rossetti, Marco and Stella, Fabio and Zanker,
+                  Markus},
+  booktitle =    {Database and Expert Systems Applications (DEXA),
+                  2013 24th International Workshop on},
+  pages =        {162--167},
+  year =         {2013},
+  organization = {IEEE}
+}
+
+@article{Kamishima,
+author = {Kamishima, Toshihiro and Akaho, Shotaro},
+year = {2017},
+month = {08},
+pages = {},
+title = {Considerations on Recommendation Independence for a Find-Good-Items Task}
+}
