--- a/proposal.bib
+++ b/proposal.bib
@@ -118,3 +118,27 @@ month = {08},
 pages = {},
 title = {Considerations on Recommendation Independence for a Find-Good-Items Task}
 }
+
+@misc{data-movielens,
+  title =        {MovieLens 20M Dataset},
+  author =       {GroupLens},
+  howpublished = {\url{https://grouplens.org/datasets/movielens/20m/}},
+  note =         accessed # "2017-03-24",
+  year = {2017},
+}
+
+@misc{data-imdb,
+  title =        {IMDB Alternative Interfaces},
+  howpublished = {\url{http://www.imdb.com/interfaces}},
+  note =         accessed # "2016-11-17",
+  year =         {2016},
+  author = {IMDB},
+}
+
+@misc{data-dbtropes,
+  title =        {DBTropes},
+  author =       {Malte Kiesel},
+  howpublished = {\url{http://skipforward.opendfki.de/wiki/DBTropes}},
+  note =         accessed # "2018-1-31",
+  year =         {2018},
+}
