lfi draft ready

--- a/lfi.tex
+++ b/lfi.tex
@@ -65,4 +65,12 @@ whom has a set of liked and disliked features, and the rating is determined by
 their presence or absence for a given movie. Since the true list of features
 that influence preferences of a particular user is known, every explanation can
 be evaluated by how close to the top of the list of inferred influential
-features the real ones are.
+features the real ones are. We have shown that with a high statistical
+significance, our method is consistently determining the influential features
+better than random.
+
+One piece of proposed work is to apply this method to course recommendations by
+Coursera, with whom we are discussing the possibility of collaboration. The
+usage of a recommendation system with good transparency properties could improve
+both how much the users trust the system and how good the recommendations
+given to them are.
