--- a/proposal.bib
+++ b/proposal.bib
@@ -142,3 +142,10 @@ title = {Considerations on Recommendation Independence for a Find-Good-Items Tas
   note =         accessed # "2018-1-31",
   year =         {2018},
 }
+
+@misc{171110604,
+Author = {Joshua V. Dillon and Ian Langmore and Dustin Tran and Eugene Brevdo and Srinivas Vasudevan and Dave Moore and Brian Patton and Alex Alemi and Matt Hoffman and Rif A. Saurous},
+Title = {TensorFlow Distributions},
+Year = {2017},
+Eprint = {arXiv:1711.10604},
+}
