changed the chapter structure

--- a/debiasing.tex
+++ b/debiasing.tex
@@ -1,4 +1,4 @@
-\chapter{Conditional debiasing}
+\section{Conditional debiasing}
 
 In many situations, interpretation alone may not be enough, and the model may
 have to be changed in a way that removes bias from them. While there have been
