--- a/isolating.tex
+++ b/isolating.tex
@@ -1,4 +1,4 @@
-\chapter{Isolating uninterpretability}
+\section{Isolating uninterpretability}
 
 A major drawback of the method of explaining matrix factorization in terms of
 known metadata features is that not all information encoded in the latent
