--- a/lfi.tex
+++ b/lfi.tex
@@ -1,4 +1,4 @@
-\chapter{Latent Factor Interpretation}
+\chapter{Completed Work: Latent Factor Interpretation}
 
 In this study, we introduce a method for generating explanations for the
 output of matrix factorization systems by means of interpreting latent factors
