more text into conditional debiasing

--- a/proposal.bib
+++ b/proposal.bib
@@ -127,6 +127,13 @@ title = {Considerations on Recommendation Independence for a Find-Good-Items Tas
   year = {2017},
 }
 
+@misc{data-hmda,
+ title = {HMDA Data set},
+ author = {FFIEC},
+ howpublished = {\url{https://www.ffiec.gov/hmda/hmdaflat.htm}},
+ year = {2018},
+}
+
 @misc{data-imdb,
   title =        {IMDB Alternative Interfaces},
   howpublished = {\url{http://www.imdb.com/interfaces}},
@@ -148,4 +155,12 @@ Author = {Joshua V. Dillon and Ian Langmore and Dustin Tran and Eugene Brevdo an
 Title = {TensorFlow Distributions},
 Year = {2017},
 Eprint = {arXiv:1711.10604},
+}
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
 }
