--- a/debiasing.tex
+++ b/debiasing.tex
@@ -73,14 +73,67 @@ model to be able to optimize for the loss function $L' = L + I(V;X_{pr}|X_{bn})$
 the entirety of the process of density estimation must be differentiable so that
 gradient descent could be used for optimization.
 
-TensorFlow framework offers implementation of statistical analysis methods
+While conditional mutual information term that we are adding can look similar to
+cross entropy loss, which is commonly used in neural network training, and the
+differentiation of which is a solved problem, the ability to differentiate it
+hinges on treating the output of the output layer and the one-hot encoding of
+the training data as probability distributions. In other words, the existing
+solutions treat distributions as given and only compute the cross-entropy term
+based on them. In our case, the distribution is not given; in fact, it cannot be
+even computed on a single training example (which is what the standard
+cross-entropy loss term does), but rather is an aggregate statistic of an entire
+training minibatch (which also puts an additional constraint on using stochastic
+gradient descent for training: the minibatch has be to large enough for the
+density estimation to be accurate). This statistic has be computed in the run time,
+and in an analytically differentiable way so that gradient of the entire loss
+function could be computed as well.
+
+The ability to compute the gradient is desirable because gradient-based
+optimization is very commonly used in deep learning\cite{Goodfellow-et-al-2016},
+and therefore it is easier to incorporate into existing systems and models. At
+this point, however, it is unclear to us whether accurate and differentiable
+density estimation can be done for the case general enough to be applicable to a
+large enough set of real-life problems. If it turns out to be impossible, the
+alternative strategy would involve computing density in the most applicable way
+without the constraint of differentiability, and then using either numeric
+gradient estimation (which would be slower but in this case necessary) or using
+non-gradient-based optimization techniques.
+
+So far, our research into this problem involved using Home Mortgage Disclosure
+Act data set\cite{https://www.ffiec.gov/hmda/hmdaflat.htm}, for which we were
+using predictive models using TensorFlow framework. This framework offer a model
+of ``end-to-end differentiable'' computation, which means that if we implement a
+computation using the tools that TensorFlow provides, the computation is
+guaranteed to be differentiable, and TensorFlow can automatically compute the
+gradient and run optimization on it.
+
+TensorFlow offers implementation of statistical analysis methods
 which can be used in kernel density estimation and are differentiable
 \cite{171110604}. However, in order to maintain the desired properties, this
 implementation has significant constraints, such as not supporting the addition
-of distributions.
+of distributions. We are yet to determine whether this allows us to compute the
+mutual information term or we have to use another method. Furthermore, while the
+implementation of kernel density estimation is already available, we need to
+determine whether this method is applicable in our task or some other method of
+density estimation would be a better fit.
 
 The proposed work in this section is to address these challenges in estimating
 distributions -- possibly by imposing certain constraints on the kinds of models
 and data sets that can this method can be applicable to -- and implement a
 system capable of training debiased models subject to constraint of maintaining
 business necessity features.
+
+So far, the complexity of the density estimation problem and the complexity of
+the HMDA data set have prevented us from testing a broader hypothesis that the
+method of minimizing conditional mutual information itself is viable. In order to
+isolate the complexity of this problem, we are planning to generate series of
+smaller-scale synthetic data sets, which have the lowest possible dimensionality
+for the method to be applicable, and for which we can know the distributions and
+expected outcomes exactly. Specifically, if we only use binary features or
+discrete features with relatively few categories, use also binary or
+discrete output $Ŷ$ for optimization, and make sure that the data set is dense
+enough in the feature space, density estimation can be solved by simple counting,
+in which case we don't need to solve the problem of density estimation in a 
+more general case. Thus, we can test the overall method and possibly test
+non-gradient optimization techniques as well, and then check how far we can
+generalize from the simplest possible case.
