--- a/proposal.bib
+++ b/proposal.bib
@@ -164,3 +164,41 @@ Eprint = {arXiv:1711.10604},
     note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
+
+@inproceedings{craven1995extracting,
+    author = {Craven, Mark W. and Shavlik, Jude W.},
+    title = {Extracting Tree-structured Representations of Trained Networks},
+    booktitle = {Proceedings of the 8th International Conference on Neural Information Processing Systems},
+    series = {NIPS'95},
+    year = {1995},
+    location = {Denver, Colorado},
+    pages = {24--30},
+    numpages = {7},
+    publisher = {MIT Press},
+    address = {Cambridge, MA, USA},
+}
+
+@inproceedings{ribeiro2016lime,
+    author = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+    title = {"Why Should I Trust You?": Explaining the Predictions of Any Classifier},
+    booktitle = {Proceedings of the 22Nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+    series = {KDD '16},
+    year = {2016},
+    isbn = {978-1-4503-4232-2},
+    location = {San Francisco, California, USA},
+    pages = {1135--1144},
+    numpages = {10},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@article{sanchez2015towards,
+  title =        {Towards extracting faithful and descriptive
+                  representations of latent variable models},
+  author =       {Sanchez, Ivan and Rocktaschel, Tim and Riedel,
+                  Sebastian and Singh, Sameer},
+  journal =      {AAAI Spring Syposium on Knowledge Representation and
+                  Reasoning (KRR): Integrating Symbolic and Neural
+                  Approaches},
+  year =         {2015}
+}
